--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,10 @@ jobs:
     - uses: dtolnay/rust-toolchain@4be9e76fd7c4901c61fb841f559994984270fce7 # stable
     - uses: rust-lang/crates-io-auth-action@b7e9a28eded4986ec6b1fa40eeee8f8f165559ec # v1.0.3
       id: auth
-    - run: cargo publish --workspace
+    - run: |
+        cargo publish -p whale
+        cargo publish -p query-flow-macros
+        cargo publish -p query-flow-inspector
+        cargo publish -p query-flow
       env:
         CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
