make cargo release idempotent

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,18 @@ jobs:
     - uses: rust-lang/crates-io-auth-action@b7e9a28eded4986ec6b1fa40eeee8f8f165559ec # v1.0.3
       id: auth
     - run: |
-        cargo publish -p whale
-        cargo publish -p query-flow-macros
-        cargo publish -p query-flow-inspector
-        cargo publish -p query-flow
+        publish() {
+          output=$(cargo publish -p "$1" 2>&1) && return 0
+          if echo "$output" | grep -q "already uploaded"; then
+            echo "Skipping $1: already published"
+            return 0
+          fi
+          echo "$output" >&2
+          return 1
+        }
+        publish whale
+        publish query-flow-macros
+        publish query-flow-inspector
+        publish query-flow
       env:
         CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
