--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/ryo33/query-flow"
 repository = "https://github.com/ryo33/query-flow"
+readme = "README.md"
 
 [workspace.dependencies]
 whale = { path = "crates/whale", version = "0.4.0" }
