--- a/crates/query-flow-inspector/Cargo.toml
+++ b/crates/query-flow-inspector/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+readme.workspace = true
 description = "Flow Inspector: Tracing and observability for query-flow"
 
 [features]
