--- a/crates/query-flow-macros/Cargo.toml
+++ b/crates/query-flow-macros/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+readme.workspace = true
 keywords = ["reactive", "incremental", "query", "macro"]
 description = "Procedural macros for query-flow."
 categories = ["development-tools::procedural-macro-helpers"]
