--- a/crates/query-flow/Cargo.toml
+++ b/crates/query-flow/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+readme.workspace = true
 keywords = ["reactive", "incremental"]
 description = "A high-level query framework built on whale for incremental computation."
 categories = []
