--- a/crates/whale/Cargo.toml
+++ b/crates/whale/Cargo.toml
@@ -5,10 +5,10 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 repository.workspace = true
+readme.workspace = true
 keywords = ["reactive", "incremental", "dependency-tracking"]
 description = "A lock-free, dependency-tracking primitive for incremental computation."
 categories = ["data-structures"]
-readme = "../../README.md"
 
 [features]
 default = ["serde"]
